select.result, select.test:   Added a test case for bug #5333. null_key.result, key_primary.result:   Made covering index usable for const tables. sql_select.cc:   Made covering index usable for const tables:   downported the corresponding code from 4.1.   Simultaneously fixed bug #5333 reported for 4.1.   The bug was due to the fact that field index in join   structures was always set to 0 for const tables.

sql/sql_select.cc:
  Made covering index usable for const tables:
  downported the corresponding code from 4.1.
  Simultaneously fixed bug #5333 reported for 4.1.
  The bug was due to the fact that field index in join
  structures was always set to 0 for const tables.
mysql-test/t/select.test:
  Added a test case for bug #5333.
mysql-test/r/key_primary.result:
  Made covering index usable for const tables.
mysql-test/r/null_key.result:
  Made covering index usable for const tables.
mysql-test/r/select.result:
  Added a test case for bug #5333.